// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SLOList should render SLOList empty serviceLevelObjectivesDetails 1`] = `
<div>
  <div
    class="Layout--horizontal StyledProps--main PageHeader--container PageHeader--standard StyledProps--flex StyledProps--padding-left-xlarge StyledProps--padding-right-xlarge StyledProps--background-white"
  >
    <div
      class="Layout--vertical StyledProps--main"
    >
      <p
        class="StyledProps--font StyledProps--main"
      >
        SLOs matching the time window.
      </p>
    </div>
    <div
      class="bp3-input-group ui-search-box ExpandingSearchInput--main   ExpandingSearchInput--alwaysExpanded ExpandingSearchInput--light"
      data-name=""
      style="width: 250px; max-width: 250px;"
    >
      <span
        class="bp3-icon StyledProps--main ExpandingSearchInput--icon StyledProps--color StyledProps--color-grey700"
        data-icon="thinner-search"
      >
        <svg
          fill="none"
          height="14"
          viewBox="0 0 16 16"
          width="14"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M7.125 13.25c1.617 0 3.32-.695 4.375-1.75L15 15l-3.5-3.5c1.021-1.005 1.75-2.894 1.75-4.375a6.125 6.125 0 10-6.125 6.125z"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
          />
        </svg>
      </span>
      <input
        class="bp3-input  ExpandingSearchInput--filter"
        dir="auto"
        placeholder="Search"
        style="padding-right: 38px;"
        type="search"
        value=""
      />
    </div>
  </div>
  <div
    class="StyledProps--font StyledProps--main StyledProps--margin-medium"
  >
    <div
      class="StyledProps--font StyledProps--main PageBody--pageBody"
      data-name="page-body"
    >
      <div
        class="TableV2--table"
      >
        <div
          class="TableV2--header"
          role="row"
        >
          <div
            class="TableV2--cell"
            colspan="1"
            role="columnheader"
            style="width: 50px;"
          >
            <p
              class="StyledProps--font StyledProps--main StyledProps--font-variation-table-headers"
            >
              
            </p>
          </div>
          <div
            class="TableV2--cell"
            colspan="1"
            role="columnheader"
            style="width: 20%;"
          >
            <p
              class="StyledProps--font StyledProps--main StyledProps--font-variation-table-headers"
            >
              CV.SLOS.SLONAME
            </p>
          </div>
          <div
            class="TableV2--cell"
            colspan="1"
            role="columnheader"
            style="width: 20%;"
          >
            <p
              class="StyledProps--font StyledProps--main StyledProps--font-variation-table-headers"
            >
              CV.SLOS.MONITOREDSERVICE
            </p>
          </div>
          <div
            class="TableV2--cell"
            colspan="1"
            role="columnheader"
            style="width: 20%;"
          >
            <p
              class="StyledProps--font StyledProps--main StyledProps--font-variation-table-headers"
            >
              CV.SLOS.USERJOURNEY
            </p>
          </div>
          <div
            class="TableV2--cell"
            colspan="1"
            role="columnheader"
            style="width: 20%;"
          >
            <p
              class="StyledProps--font StyledProps--main StyledProps--font-variation-table-headers"
            >
              TAGSLABEL
            </p>
          </div>
          <div
            class="TableV2--cell"
            colspan="1"
            role="columnheader"
            style="width: 20%;"
          >
            <p
              class="StyledProps--font StyledProps--main StyledProps--font-variation-table-headers"
            >
              CV.SLOS.TARGET
            </p>
          </div>
        </div>
        <div
          class="TableV2--body"
        >
          <div
            class="TableV2--row TableV2--card"
            role="row"
          >
            <div
              class="TableV2--cells"
            >
              <div
                class="TableV2--cell"
                role="cell"
                style="width: 50px;"
              >
                <label
                  class="bp3-control bp3-checkbox StyledProps--font Checkbox--checkbox StyledProps--main"
                >
                  <input
                    checked=""
                    type="checkbox"
                  />
                  <span
                    class="bp3-control-indicator"
                  />
                </label>
              </div>
              <div
                class="TableV2--cell"
                role="cell"
                style="width: 20%;"
              >
                <p
                  class="StyledProps--font StyledProps--main StyledProps--color StyledProps--color-primary7 StyledProps--font-align-left StyledProps--font-size-normal StyledProps--font-weight-semi-bold"
                  title="SLO-4"
                >
                  SLO-4
                </p>
                <p
                  class="StyledProps--font StyledProps--main StyledProps--font-align-left StyledProps--font-size-small"
                  title="SLO-4"
                >
                  Tracks SLO error rate
                </p>
              </div>
              <div
                class="TableV2--cell"
                role="cell"
                style="width: 20%;"
              >
                <div
                  class="Layout--vertical StyledProps--main StyledProps--padding-left-small"
                >
                  <p
                    class="StyledProps--font StyledProps--main titleInSloTable StyledProps--color StyledProps--color-primary7 StyledProps--font-align-left StyledProps--font-size-normal StyledProps--font-weight-semi-bold"
                    title="service_appd"
                  >
                    service_appd
                  </p>
                  <p
                    class="StyledProps--font StyledProps--main StyledProps--color StyledProps--color-primary7 StyledProps--font-align-left StyledProps--font-size-xsmall"
                    title="env_appd"
                  >
                    env_appd
                  </p>
                </div>
              </div>
              <div
                class="TableV2--cell"
                role="cell"
                style="width: 20%;"
              >
                <p
                  class="StyledProps--font StyledProps--main titleInSloTable StyledProps--font-align-left StyledProps--font-size-normal StyledProps--font-weight-semi-bold"
                  title="Journey-3"
                >
                  Journey-3
                </p>
              </div>
              <div
                class="TableV2--cell"
                role="cell"
                style="width: 20%;"
              >
                <p
                  class="StyledProps--font StyledProps--main titleInSloTable StyledProps--font-align-left StyledProps--font-size-normal StyledProps--font-weight-semi-bold"
                  title=""
                >
                  
                </p>
              </div>
              <div
                class="TableV2--cell"
                role="cell"
                style="width: 20%;"
              >
                <p
                  class="StyledProps--font StyledProps--main titleInSloTable StyledProps--font-align-left StyledProps--font-size-normal StyledProps--font-weight-semi-bold"
                  title=" 97%"
                >
                   97%
                </p>
              </div>
            </div>
          </div>
          <div
            class="TableV2--row TableV2--card"
            role="row"
          >
            <div
              class="TableV2--cells"
            >
              <div
                class="TableV2--cell"
                role="cell"
                style="width: 50px;"
              >
                <label
                  class="bp3-control bp3-checkbox StyledProps--font Checkbox--checkbox StyledProps--main"
                >
                  <input
                    checked=""
                    type="checkbox"
                  />
                  <span
                    class="bp3-control-indicator"
                  />
                </label>
              </div>
              <div
                class="TableV2--cell"
                role="cell"
                style="width: 20%;"
              >
                <p
                  class="StyledProps--font StyledProps--main StyledProps--color StyledProps--color-primary7 StyledProps--font-align-left StyledProps--font-size-normal StyledProps--font-weight-semi-bold"
                  title="SLO-3"
                >
                  SLO-3
                </p>
                <p
                  class="StyledProps--font StyledProps--main StyledProps--font-align-left StyledProps--font-size-small"
                  title="SLO-3"
                >
                  Tracks SLO error rate
                </p>
              </div>
              <div
                class="TableV2--cell"
                role="cell"
                style="width: 20%;"
              >
                <div
                  class="Layout--vertical StyledProps--main StyledProps--padding-left-small"
                >
                  <p
                    class="StyledProps--font StyledProps--main titleInSloTable StyledProps--color StyledProps--color-primary7 StyledProps--font-align-left StyledProps--font-size-normal StyledProps--font-weight-semi-bold"
                    title="service_appd"
                  >
                    service_appd
                  </p>
                  <p
                    class="StyledProps--font StyledProps--main StyledProps--color StyledProps--color-primary7 StyledProps--font-align-left StyledProps--font-size-xsmall"
                    title="env_appd"
                  >
                    env_appd
                  </p>
                </div>
              </div>
              <div
                class="TableV2--cell"
                role="cell"
                style="width: 20%;"
              >
                <p
                  class="StyledProps--font StyledProps--main titleInSloTable StyledProps--font-align-left StyledProps--font-size-normal StyledProps--font-weight-semi-bold"
                  title="Journey-3"
                >
                  Journey-3
                </p>
              </div>
              <div
                class="TableV2--cell"
                role="cell"
                style="width: 20%;"
              >
                <p
                  class="StyledProps--font StyledProps--main titleInSloTable StyledProps--font-align-left StyledProps--font-size-normal StyledProps--font-weight-semi-bold"
                  title=""
                >
                  
                </p>
              </div>
              <div
                class="TableV2--cell"
                role="cell"
                style="width: 20%;"
              >
                <p
                  class="StyledProps--font StyledProps--main titleInSloTable StyledProps--font-align-left StyledProps--font-size-normal StyledProps--font-weight-semi-bold"
                  title=" 97%"
                >
                   97%
                </p>
              </div>
            </div>
          </div>
        </div>
        <div
          class="Layout--horizontal StyledProps--main TableV2--pagination Pagination--container StyledProps--padding-top-medium StyledProps--padding-bottom-medium StyledProps--flex StyledProps--flex-align-center-center StyledProps--flex-distribution-space-between"
        >
          <span
            class="StyledProps--font StyledProps--main StyledProps--inline StyledProps--font-variation-small-semi"
          >
            2
             of 
            2
          </span>
          <div
            class="Layout--horizontal StyledProps--main"
          >
            <button
              aria-label="Prev"
              class="bp3-button bp3-disabled Button--button StyledProps--font StyledProps--main Pagination--roundedButton Pagination--buttonLeft Button--with-current-color Button--withLeftIcon Button--size Button--small"
              disabled=""
              tabindex="-1"
              type="button"
            >
              <span
                class="bp3-icon bp3-icon-arrow-left StyledProps--main StyledProps--padding-right-xsmall"
                icon="arrow-left"
              >
                <svg
                  data-icon="arrow-left"
                  height="12"
                  viewBox="0 0 16 16"
                  width="12"
                >
                  <desc>
                    arrow-left
                  </desc>
                  <path
                    d="M13.99 6.99H4.41L7.7 3.7a1.003 1.003 0 00-1.42-1.42l-5 5a1.014 1.014 0 000 1.42l5 5a1.003 1.003 0 001.42-1.42L4.41 8.99H14c.55 0 1-.45 1-1s-.46-1-1.01-1z"
                    fill-rule="evenodd"
                  />
                </svg>
              </span>
              <span
                class="bp3-button-text"
              >
                Prev
              </span>
            </button>
            <button
              class="bp3-button bp3-disabled Button--button StyledProps--font StyledProps--main Pagination--roundedButton Pagination--selected Button--with-current-color"
              disabled=""
              tabindex="-1"
              type="button"
            >
              <span
                class="bp3-button-text"
              >
                1
              </span>
            </button>
            <button
              aria-label="Next"
              class="bp3-button bp3-disabled Button--button StyledProps--font StyledProps--main Pagination--roundedButton Pagination--buttonRight Button--with-current-color Button--withRightIcon Button--size Button--small"
              disabled=""
              tabindex="-1"
              type="button"
            >
              <span
                class="bp3-button-text"
              >
                Next
              </span>
              <span
                class="bp3-icon bp3-icon-arrow-right StyledProps--main"
                icon="arrow-right"
              >
                <svg
                  data-icon="arrow-right"
                  height="12"
                  viewBox="0 0 16 16"
                  width="12"
                >
                  <desc>
                    arrow-right
                  </desc>
                  <path
                    d="M14.7 7.29l-5-5a.965.965 0 00-.71-.3 1.003 1.003 0 00-.71 1.71l3.29 3.29H1.99c-.55 0-1 .45-1 1s.45 1 1 1h9.59l-3.29 3.29a1.003 1.003 0 001.42 1.42l5-5c.18-.18.29-.43.29-.71s-.12-.52-.3-.7z"
                    fill-rule="evenodd"
                  />
                </svg>
              </span>
            </button>
          </div>
          <span>
            Showing 10 per page
          </span>
        </div>
      </div>
      <button
        aria-label="add"
        class="bp3-button bp3-disabled bp3-loading Button--button StyledProps--font StyledProps--main Button--with-current-color Button--variation Button--variation-primary"
        data-testid="addSloButton"
        disabled=""
        style="width: 150px;"
        tabindex="-1"
        type="button"
      >
        <div
          class="bp3-spinner bp3-button-spinner"
        >
          <div
            class="bp3-spinner-animation"
          >
            <svg
              height="20"
              stroke-width="16.00"
              viewBox="-3.00 -3.00 106.00 106.00"
              width="20"
            >
              <path
                class="bp3-spinner-track"
                d="M 50,50 m 0,-45 a 45,45 0 1 1 0,90 a 45,45 0 1 1 0,-90"
              />
              <path
                class="bp3-spinner-head"
                d="M 50,50 m 0,-45 a 45,45 0 1 1 0,90 a 45,45 0 1 1 0,-90"
                pathLength="280"
                stroke-dasharray="280 280"
                stroke-dashoffset="210"
              />
            </svg>
          </div>
        </div>
        <span
          class="bp3-button-text"
        >
          add
        </span>
      </button>
    </div>
  </div>
</div>
`;

exports[`SLOList should render SLOList with No filter 1`] = `
<div>
  <div
    class="Layout--horizontal StyledProps--main PageHeader--container PageHeader--standard StyledProps--flex StyledProps--padding-left-xlarge StyledProps--padding-right-xlarge StyledProps--background-white"
  >
    <div
      class="Layout--vertical StyledProps--main"
    >
      <p
        class="StyledProps--font StyledProps--main"
      >
        SLOs matching the time window.
      </p>
    </div>
    <div
      class="bp3-input-group ui-search-box ExpandingSearchInput--main   ExpandingSearchInput--alwaysExpanded ExpandingSearchInput--light"
      data-name=""
      style="width: 250px; max-width: 250px;"
    >
      <span
        class="bp3-icon StyledProps--main ExpandingSearchInput--icon StyledProps--color StyledProps--color-grey700"
        data-icon="thinner-search"
      >
        <svg
          fill="none"
          height="14"
          viewBox="0 0 16 16"
          width="14"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M7.125 13.25c1.617 0 3.32-.695 4.375-1.75L15 15l-3.5-3.5c1.021-1.005 1.75-2.894 1.75-4.375a6.125 6.125 0 10-6.125 6.125z"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
          />
        </svg>
      </span>
      <input
        class="bp3-input  ExpandingSearchInput--filter"
        dir="auto"
        placeholder="Search"
        style="padding-right: 38px;"
        type="search"
        value=""
      />
    </div>
  </div>
  <div
    class="StyledProps--font StyledProps--main StyledProps--margin-medium"
  >
    <div
      class="StyledProps--font StyledProps--main PageBody--pageBody"
      data-name="page-body"
    >
      <div
        class="TableV2--table"
      >
        <div
          class="TableV2--header"
          role="row"
        >
          <div
            class="TableV2--cell"
            colspan="1"
            role="columnheader"
            style="width: 50px;"
          >
            <p
              class="StyledProps--font StyledProps--main StyledProps--font-variation-table-headers"
            >
              
            </p>
          </div>
          <div
            class="TableV2--cell"
            colspan="1"
            role="columnheader"
            style="width: 20%;"
          >
            <p
              class="StyledProps--font StyledProps--main StyledProps--font-variation-table-headers"
            >
              CV.SLOS.SLONAME
            </p>
          </div>
          <div
            class="TableV2--cell"
            colspan="1"
            role="columnheader"
            style="width: 20%;"
          >
            <p
              class="StyledProps--font StyledProps--main StyledProps--font-variation-table-headers"
            >
              CV.SLOS.MONITOREDSERVICE
            </p>
          </div>
          <div
            class="TableV2--cell"
            colspan="1"
            role="columnheader"
            style="width: 20%;"
          >
            <p
              class="StyledProps--font StyledProps--main StyledProps--font-variation-table-headers"
            >
              CV.SLOS.USERJOURNEY
            </p>
          </div>
          <div
            class="TableV2--cell"
            colspan="1"
            role="columnheader"
            style="width: 20%;"
          >
            <p
              class="StyledProps--font StyledProps--main StyledProps--font-variation-table-headers"
            >
              TAGSLABEL
            </p>
          </div>
          <div
            class="TableV2--cell"
            colspan="1"
            role="columnheader"
            style="width: 20%;"
          >
            <p
              class="StyledProps--font StyledProps--main StyledProps--font-variation-table-headers"
            >
              CV.SLOS.TARGET
            </p>
          </div>
        </div>
        <div
          class="TableV2--body"
        >
          <div
            class="TableV2--row TableV2--card"
            role="row"
          >
            <div
              class="TableV2--cells"
            >
              <div
                class="TableV2--cell"
                role="cell"
                style="width: 50px;"
              >
                <label
                  class="bp3-control bp3-checkbox StyledProps--font Checkbox--checkbox StyledProps--main"
                >
                  <input
                    checked=""
                    type="checkbox"
                  />
                  <span
                    class="bp3-control-indicator"
                  />
                </label>
              </div>
              <div
                class="TableV2--cell"
                role="cell"
                style="width: 20%;"
              >
                <p
                  class="StyledProps--font StyledProps--main StyledProps--color StyledProps--color-primary7 StyledProps--font-align-left StyledProps--font-size-normal StyledProps--font-weight-semi-bold"
                  title="SLO-4"
                >
                  SLO-4
                </p>
                <p
                  class="StyledProps--font StyledProps--main StyledProps--font-align-left StyledProps--font-size-small"
                  title="SLO-4"
                >
                  Tracks SLO error rate
                </p>
              </div>
              <div
                class="TableV2--cell"
                role="cell"
                style="width: 20%;"
              >
                <div
                  class="Layout--vertical StyledProps--main StyledProps--padding-left-small"
                >
                  <p
                    class="StyledProps--font StyledProps--main titleInSloTable StyledProps--color StyledProps--color-primary7 StyledProps--font-align-left StyledProps--font-size-normal StyledProps--font-weight-semi-bold"
                    title="service_appd"
                  >
                    service_appd
                  </p>
                  <p
                    class="StyledProps--font StyledProps--main StyledProps--color StyledProps--color-primary7 StyledProps--font-align-left StyledProps--font-size-xsmall"
                    title="env_appd"
                  >
                    env_appd
                  </p>
                </div>
              </div>
              <div
                class="TableV2--cell"
                role="cell"
                style="width: 20%;"
              >
                <p
                  class="StyledProps--font StyledProps--main titleInSloTable StyledProps--font-align-left StyledProps--font-size-normal StyledProps--font-weight-semi-bold"
                  title="Journey-3"
                >
                  Journey-3
                </p>
              </div>
              <div
                class="TableV2--cell"
                role="cell"
                style="width: 20%;"
              >
                <p
                  class="StyledProps--font StyledProps--main titleInSloTable StyledProps--font-align-left StyledProps--font-size-normal StyledProps--font-weight-semi-bold"
                  title=""
                >
                  
                </p>
              </div>
              <div
                class="TableV2--cell"
                role="cell"
                style="width: 20%;"
              >
                <p
                  class="StyledProps--font StyledProps--main titleInSloTable StyledProps--font-align-left StyledProps--font-size-normal StyledProps--font-weight-semi-bold"
                  title=" 97%"
                >
                   97%
                </p>
              </div>
            </div>
          </div>
          <div
            class="TableV2--row TableV2--card"
            role="row"
          >
            <div
              class="TableV2--cells"
            >
              <div
                class="TableV2--cell"
                role="cell"
                style="width: 50px;"
              >
                <label
                  class="bp3-control bp3-checkbox StyledProps--font Checkbox--checkbox StyledProps--main"
                >
                  <input
                    checked=""
                    type="checkbox"
                  />
                  <span
                    class="bp3-control-indicator"
                  />
                </label>
              </div>
              <div
                class="TableV2--cell"
                role="cell"
                style="width: 20%;"
              >
                <p
                  class="StyledProps--font StyledProps--main StyledProps--color StyledProps--color-primary7 StyledProps--font-align-left StyledProps--font-size-normal StyledProps--font-weight-semi-bold"
                  title="SLO-3"
                >
                  SLO-3
                </p>
                <p
                  class="StyledProps--font StyledProps--main StyledProps--font-align-left StyledProps--font-size-small"
                  title="SLO-3"
                >
                  Tracks SLO error rate
                </p>
              </div>
              <div
                class="TableV2--cell"
                role="cell"
                style="width: 20%;"
              >
                <div
                  class="Layout--vertical StyledProps--main StyledProps--padding-left-small"
                >
                  <p
                    class="StyledProps--font StyledProps--main titleInSloTable StyledProps--color StyledProps--color-primary7 StyledProps--font-align-left StyledProps--font-size-normal StyledProps--font-weight-semi-bold"
                    title="service_appd"
                  >
                    service_appd
                  </p>
                  <p
                    class="StyledProps--font StyledProps--main StyledProps--color StyledProps--color-primary7 StyledProps--font-align-left StyledProps--font-size-xsmall"
                    title="env_appd"
                  >
                    env_appd
                  </p>
                </div>
              </div>
              <div
                class="TableV2--cell"
                role="cell"
                style="width: 20%;"
              >
                <p
                  class="StyledProps--font StyledProps--main titleInSloTable StyledProps--font-align-left StyledProps--font-size-normal StyledProps--font-weight-semi-bold"
                  title="Journey-3"
                >
                  Journey-3
                </p>
              </div>
              <div
                class="TableV2--cell"
                role="cell"
                style="width: 20%;"
              >
                <p
                  class="StyledProps--font StyledProps--main titleInSloTable StyledProps--font-align-left StyledProps--font-size-normal StyledProps--font-weight-semi-bold"
                  title=""
                >
                  
                </p>
              </div>
              <div
                class="TableV2--cell"
                role="cell"
                style="width: 20%;"
              >
                <p
                  class="StyledProps--font StyledProps--main titleInSloTable StyledProps--font-align-left StyledProps--font-size-normal StyledProps--font-weight-semi-bold"
                  title=" 97%"
                >
                   97%
                </p>
              </div>
            </div>
          </div>
        </div>
        <div
          class="Layout--horizontal StyledProps--main TableV2--pagination Pagination--container StyledProps--padding-top-medium StyledProps--padding-bottom-medium StyledProps--flex StyledProps--flex-align-center-center StyledProps--flex-distribution-space-between"
        >
          <span
            class="StyledProps--font StyledProps--main StyledProps--inline StyledProps--font-variation-small-semi"
          >
            2
             of 
            2
          </span>
          <div
            class="Layout--horizontal StyledProps--main"
          >
            <button
              aria-label="Prev"
              class="bp3-button bp3-disabled Button--button StyledProps--font StyledProps--main Pagination--roundedButton Pagination--buttonLeft Button--with-current-color Button--withLeftIcon Button--size Button--small"
              disabled=""
              tabindex="-1"
              type="button"
            >
              <span
                class="bp3-icon bp3-icon-arrow-left StyledProps--main StyledProps--padding-right-xsmall"
                icon="arrow-left"
              >
                <svg
                  data-icon="arrow-left"
                  height="12"
                  viewBox="0 0 16 16"
                  width="12"
                >
                  <desc>
                    arrow-left
                  </desc>
                  <path
                    d="M13.99 6.99H4.41L7.7 3.7a1.003 1.003 0 00-1.42-1.42l-5 5a1.014 1.014 0 000 1.42l5 5a1.003 1.003 0 001.42-1.42L4.41 8.99H14c.55 0 1-.45 1-1s-.46-1-1.01-1z"
                    fill-rule="evenodd"
                  />
                </svg>
              </span>
              <span
                class="bp3-button-text"
              >
                Prev
              </span>
            </button>
            <button
              class="bp3-button bp3-disabled Button--button StyledProps--font StyledProps--main Pagination--roundedButton Pagination--selected Button--with-current-color"
              disabled=""
              tabindex="-1"
              type="button"
            >
              <span
                class="bp3-button-text"
              >
                1
              </span>
            </button>
            <button
              aria-label="Next"
              class="bp3-button bp3-disabled Button--button StyledProps--font StyledProps--main Pagination--roundedButton Pagination--buttonRight Button--with-current-color Button--withRightIcon Button--size Button--small"
              disabled=""
              tabindex="-1"
              type="button"
            >
              <span
                class="bp3-button-text"
              >
                Next
              </span>
              <span
                class="bp3-icon bp3-icon-arrow-right StyledProps--main"
                icon="arrow-right"
              >
                <svg
                  data-icon="arrow-right"
                  height="12"
                  viewBox="0 0 16 16"
                  width="12"
                >
                  <desc>
                    arrow-right
                  </desc>
                  <path
                    d="M14.7 7.29l-5-5a.965.965 0 00-.71-.3 1.003 1.003 0 00-.71 1.71l3.29 3.29H1.99c-.55 0-1 .45-1 1s.45 1 1 1h9.59l-3.29 3.29a1.003 1.003 0 001.42 1.42l5-5c.18-.18.29-.43.29-.71s-.12-.52-.3-.7z"
                    fill-rule="evenodd"
                  />
                </svg>
              </span>
            </button>
          </div>
          <span>
            Showing 10 per page
          </span>
        </div>
      </div>
      <button
        aria-label="add"
        class="bp3-button Button--button StyledProps--font StyledProps--main Button--with-current-color Button--variation Button--variation-primary"
        data-testid="addSloButton"
        style="width: 150px;"
        type="button"
      >
        <span
          class="bp3-button-text"
        >
          add
        </span>
      </button>
    </div>
  </div>
</div>
`;
